# aioconsolemenu

./: README.md  aioconsolemenu_demo.py  format.sh  lint.sh  mypy.ini  pyproject.toml  setup.cfg
aioconsolemenu/: actions.py  items.py  manager.py  menu.py  paginator.py  templates.py  terminal_utils.py
aioconsolemenu/example/: handlers.py  items.py  main.py  menus.py
aioconsolemenu/examples/: main.py
aioconsolemenu/templates/: exit.txt  menu_items.txt  menu_title.txt  next_page_item_title.txt  prev_page_item_title.txt  select_out_of_available_options.txt
