[tool.poetry]
name = "aioconsolemenu"
version = "0.1.0"
description = ""
authors = ["Alexey <anborontov@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
prompt-toolkit = "3.0.16"
infinity = "1.5"
aioconsole = "0.3.1"
mako = "1.1.4"
pynput = "^1.7.3"
python-xlib = "^0.30"

[tool.poetry.dev-dependencies]
black = "20.8b1"
isort = "5.7.0"
autoflake = "1.4"
mypy = "0.800"
wemake-python-styleguide = "0.15.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
